@@ -129,5 +129,6 @@ do
 done
 
 # Launching workflow
-echo "---- LAUNCHING WORKFLOW: nohup nice -19 $JAVA_HOME/bin/java -Xmx950M  -XX:PermSize=512m -XX:-UseGCOverheadLimit -Duser.home=\"${HOME}/prod\" -DX509_USER_PROXY=${X509_USER_PROXY} fr.insalyon.creatis.moteurlite.MoteurLite `basename ${PWD}` ${WORKFLOW_DOC} ${INPUT_DOC} 1>./workflow.out 2>./workflow.err &"
-nohup nice -19 $JAVA_HOME/bin/java -Xmx950M  -XX:PermSize=512m -XX:-UseGCOverheadLimit -Duser.home="${HOME}/prod" -DX509_USER_PROXY=${X509_USER_PROXY} fr.insalyon.creatis.moteurlite.MoteurLite `basename ${PWD}` ${WORKFLOW_DOC} ${INPUT_DOC} 1>./workflow.out 2>./workflow.err & echo ${WORKFLOW_DOC} ${INPUT_DOC}
+echo "---- LAUNCHING WORKFLOW: nohup nice -19 $JAVA_HOME/bin/java -Xmx950M -XX:-UseGCOverheadLimit -Duser.home=\"${HOME}/prod\" -DX509_USER_PROXY=${X509_USER_PROXY} fr.insalyon.creatis.moteurlite.MoteurLite `basename ${PWD}` ${WORKFLOW_DOC} ${INPUT_DOC} 1>./workflow.out 2>./workflow.err &"
+nohup nice -19 $JAVA_HOME/bin/java -Xmx950M -XX:-UseGCOverheadLimit -Duser.home="${HOME}/prod" -DX509_USER_PROXY=${X509_USER_PROXY} fr.insalyon.creatis.moteurlite.MoteurLite `basename ${PWD}` ${WORKFLOW_DOC} ${INPUT_DOC} 1>./workflow.out 2>./workflow.err & echo ${WORKFLOW_DOC} ${INPUT_DOC}
+
